JumpScript/tests/baselines/reference/jsxAttributeWithoutExpressionReact.errors.txt
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(2,2): error TS2304: Cannot find name 'View'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(3,6): error TS2304: Cannot find name 'ListView'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(4,10): error TS2304: Cannot find name 'RefreshControl'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(4,35): error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(5,44): error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(6,7): error TS2304: Cannot find name 'ListView'.
tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx(7,3): error TS2304: Cannot find name 'View'.


==== tests/cases/compiler/jsxAttributeWithoutExpressionReact.jmpx (7 errors) ====
    declare var React: any;
    <View>
     ~~~~
!!! error TS2304: Cannot find name 'View'.
        <ListView refreshControl={
         ~~~~~~~~
!!! error TS2304: Cannot find name 'ListView'.
            <RefreshControl onRefresh={} refreshing={} />
             ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'RefreshControl'.
                                      ~~
!!! error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
        } dataSource={this.state.ds} renderRow={}>
                                               ~~
!!! error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
        </ListView>
          ~~~~~~~~
!!! error TS2304: Cannot find name 'ListView'.
    </View>
      ~~~~
!!! error TS2304: Cannot find name 'View'.
    